--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      window.addEventListener(`DOMContentLoaded`, (event) => {
+        let iframe = document.querySelector(`iframe`);
+        console.log(iframe);
+      });
+    </script>
   </body>
 </html>
