--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./courses.js"></script>
     <script>
       window.addEventListener(`DOMContentLoaded`, (event) => {
         let iframe = document.querySelector(`iframe`);
-        console.log(iframe);
+        if (iframe) {
+          iframe.style.display = `none`;
+        }
       });
     </script>
   </body>
