--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link
+    <link
       rel="icon"
       href="./assets/netflixIconTransparentXL.png"
       type="image/x-icon"
-    /> -->
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
