no rel icon no favion

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link
       rel="icon"
-      href="./assets/netflixIconTransparentXL.png"
+      href="https://github.com/strawhat19/react-netflix-clone/blob/main/public/assets/netflixIconTransparentXL.png?raw=true"
       type="image/x-icon"
     /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
