--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link
+    <link
       rel="icon"
       href="https://github.com/strawhat19/react-netflix-clone/blob/main/public/assets/netflixIconTransparentXL.png?raw=true"
       type="image/x-icon"
-    /> -->
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,10 +14,13 @@
       content="Web site created using create-react-app"
     />
     <link
-      rel="apple-touch-icon"
-      href="%PUBLIC_URL%/assets/netflixIconTransparentXL.png"
+      rel="react-netflix-icon"
+      href="https://github.com/strawhat19/react-netflix-clone/blob/main/public/assets/netflixIconTransparentXL.png?raw=true"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="manifest"
+      href="https://raw.githubusercontent.com/strawhat19/react-netflix-clone/main/public/manifest.json"
+    />
     <!-- Font Awesome Icons -->
     <link
       rel="stylesheet"
