--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="”og:image”" content="%PUBLIC_URL%/assets/design11.jpg" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A React Netflix Clone made using TypeScript, SASS, Material UI, Firebase, Auth,, Express, Heroku, Redux for State Management, and Finally React Router DOM. This project is currently in Development. Web site created using create-react-app"
     />
     <link
       rel="react-netflix-icon"
