--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://github.com/strawhat19/react-netflix-clone/blob/main/public/assets/netflixIconTransparentXL.png?raw=true"
-      type="image/x-icon"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="”og:image”" content="%PUBLIC_URL%/assets/design12.jpg" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A React Netflix Clone made using TypeScript, SASS, Material UI, Firebase, Auth,, Express, Heroku, Redux for State Management, and Finally React Router DOM. This project is currently in Development. Web site created using create-react-app"
-    />
-    <link
-      rel="react-netflix-icon"
-      href="https://github.com/strawhat19/react-netflix-clone/blob/main/public/assets/netflixIconTransparentXL.png?raw=true"
-    />
-    <link
-      rel="manifest"
-      href="https://raw.githubusercontent.com/strawhat19/react-netflix-clone/main/public/manifest.json"
-    />
-    <!-- Font Awesome Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css"
-    />
-    <title>React Netflix Clone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/design12.jpg" />
+    
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/icons/icon-180.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css" />
+
+    <meta name="description" content="A React Netflix Clone made using TypeScript, SASS, Material UI, Firebase, Auth, Express, Heroku, Redux for State Management, and Finally React Router DOM. This project is currently in Development. Web site created using create-react-app" />
+
+    <title>
+      React Netflix Clone
+    </title>
   </head>
+
   <body>
     <div id="root"></div>
     <script>
@@ -40,4 +30,5 @@
       });
     </script>
   </body>
+
 </html>
